WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163714
[JSC] throw TypeError when constructing dynamically created JSGeneratorFunction
https://bugs.webkit.org/show_bug.cgi?id=163714
Summary
[JSC] throw TypeError when constructing dynamically created JSGeneratorFunction
Caitlin Potter (:caitp)
Reported
2016-10-19 18:22:16 PDT
[JSC] throw TypeError when constructing dynamically created JSGeneratorFunction
Attachments
Patch
(4.85 KB, patch)
2016-10-19 18:25 PDT
,
Caitlin Potter (:caitp)
no flags
Details
Formatted Diff
Diff
Patch
(4.83 KB, patch)
2016-10-20 07:38 PDT
,
Caitlin Potter (:caitp)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Caitlin Potter (:caitp)
Comment 1
2016-10-19 18:25:29 PDT
Created
attachment 292139
[details]
Patch
Caitlin Potter (:caitp)
Comment 2
2016-10-19 18:27:24 PDT
PTAL, another blocker causing test failures in the runtime patch for async functions. Corrects a little spec violation that is missing test coverage
Mark Lam
Comment 3
2016-10-19 20:00:30 PDT
Comment on
attachment 292139
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=292139&action=review
r=me
> Source/JavaScriptCore/ChangeLog:9 > + According to CreateDynamicFunction() (
https://tc39.github.io/ecma262/#sec-createdynamicfunction
), non > + "normal functions are not constructors. Previously, dynamically created functions
typo: /non"normal/non-normal/.
Caitlin Potter (:caitp)
Comment 4
2016-10-20 07:38:37 PDT
Created
attachment 292182
[details]
Patch
WebKit Commit Bot
Comment 5
2016-10-20 07:39:51 PDT
Comment on
attachment 292182
[details]
Patch Rejecting
attachment 292182
[details]
from review queue.
caitp@igalia.com
does not have reviewer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/contributors.json
. - If you do not have reviewer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have reviewer rights please correct the error in Tools/Scripts/webkitpy/common/config/contributors.json by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your reviewer rights.
WebKit Commit Bot
Comment 6
2016-10-20 08:03:27 PDT
Comment on
attachment 292182
[details]
Patch Clearing flags on attachment: 292182 Committed
r207618
: <
http://trac.webkit.org/changeset/207618
>
WebKit Commit Bot
Comment 7
2016-10-20 08:03:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug