[JSC] throw TypeError when constructing dynamically created JSGeneratorFunction https://bugs.webkit.org/show_bug.cgi?id=163714

Reviewed by Mark Lam.

JSTests:

Add missing test coverage that dynamically created
JSGeneratorFunctions can not be constructed.

* stress/generator-function-constructor.js:
(shouldThrow):

Source/JavaScriptCore:

According to CreateDynamicFunction() (https://tc39.github.io/ecma262/#sec-createdynamicfunction),
non-normal functions are not constructors. Previously, dynamically created functions would always
be constructible, and so it was possible to evaluate `new  (function*() {}.constructor())`,
and have it return an Iterator object.

This change selects a dynamically created function's ConstructAbility based on its parse mode instead.

* runtime/CodeCache.cpp:
(JSC::CodeCache::getFunctionExecutableFromGlobalCode):


Canonical link: https://commits.webkit.org/181505@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207618 268f45cc-cd09-0410-ab3c-d52691b4dbfc